# ImageProcessor

./: BMPOperator.cpp  BMPOperator.h  BaseFilter.cpp  BaseFilter.h  CMakeLists.txt  ConvolutionOperation.cpp  ConvolutionOperation.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  Image.cpp  Image.h  MedianBlurFilter.cpp  MedianBlurFilter.h  NegativeFilter.cpp  NegativeFilter.h  Pixel.cpp  Pixel.h  README.md  SaltAndPepperFilter.cpp  SaltAndPepperFilter.h  SharpFilter.cpp  SharpFilter.h  Tester.cpp  Tester.h  main.cpp
